# prayer-times-calculator

./: Cargo.toml  INSTALL.md  README.md  USAGE_GUIDE.md
src/: calculator.rs  formatter.rs  lib.rs  main.rs  math.rs  methods.rs  models.rs
src/api/: error.rs  mod.rs  routes.rs
src/api/handlers/: health.rs  methods.rs  mod.rs  prayer_times.rs  range.rs
src/api/models/: mod.rs  request.rs  response.rs
src/services/: mod.rs  prayer_service.rs
