[package]
name = "prayer-times-calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
