[package]
name = "prayer-times-calculator"
version = "0.1.0"
edition = "2021"

license = "LGPL-3.0"
description = "A high-performance Rust prayer times calculator and REST API based on PrayTimes.js algorithms."
homepage = "https://github.com/map7000/prayer-times-calculator"
repository = "https://github.com/map7000/prayer-times-calculator"
readme = "README.md"

keywords = ["prayer-times", "salah", "islam", "muslim", "calculator"]
categories = ["algorithms", "date-and-time"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "prayer_times_calculator"
path = "src/lib.rs"